refactor: Rename project to Screen 2 Text
Updates the project name and associated metadata across the application to reflect the new branding "Screen 2 Text". This includes changes to package.json, HTML meta tags, SEO keywords, JSON metadata, and UI elements.

Additionally, refactors the routing logic in App.tsx to use window.location.pathname and history API for better client-side routing and updates the Gemini API service to initialize the client directly. The prompt for text extraction has also been improved to preserve formatting.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vision Translate AI | Instant Image to Text Translation & OCR</title>
-    <meta name="description" content="Instantly extract text from images and translate it into dozens of languages with Vision Translate AI. Our powerful OCR tool, powered by Google's Gemini API, provides fast and accurate results.">
-    <meta name="keywords" content="extract text from image, image to text, ocr, online ocr, photo translator, image translation, multilingual ocr, gemini api, vision translate">
+    <title>Screen 2 Text | Instant OCR & Text Extraction from Images</title>
+    <meta name="description" content="Instantly extract text from screenshots, images, and documents with Screen 2 Text. Our powerful AI-powered OCR tool provides fast, accurate results and supports over 100 languages.">
+    <meta name="keywords" content="screen to text, image to text, ocr, online ocr, extract text from image, photo to text, screenshot ocr, gemini api">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -41,8 +41,8 @@
 {
   "@context": "https://schema.org",
   "@type": "WebApplication",
-  "name": "Vision Translate AI",
-  "description": "An intelligent web application that extracts text from any uploaded image and translates it into your desired language using the power of Google's Gemini API.",
+  "name": "Screen 2 Text",
+  "description": "An intelligent web application that extracts text from any uploaded image, screenshot, or document and allows for instant translation using the power of Google's Gemini API.",
   "applicationCategory": "ProductivityApplication",
   "operatingSystem": "Any",
   "offers": {
