--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
       }
       @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1277119669706928"
+     crossorigin="anonymous"></script>
 </head>
 <body class="bg-gray-900">
     <div id="root"></div>
