--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     </style>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1277119669706928"
      crossorigin="anonymous"></script>
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="66a6e5aa-5e93-4433-8fcd-01310329681b" data-blockingmode="auto" type="text/javascript"></script>
 </head>
 <body class="bg-gray-900">
     <div id="root"></div>
